Fixed link to hundezecke

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -55,7 +55,7 @@
 
 [[main]]
   name = "Braune Hundezecke"
-  url = "zeckenarten/hundezecke"
+  url = "zeckenarten/braune-hundezecke"
   weight = 55
   parent = "arten"
 
