--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,6 +19,11 @@
   weight = 30
 
 [[main]]
+  name = "Team"
+  url = "people/"
+  weight = 35
+
+[[main]]
   name = "Zecke einsenden"
   url = "einsenden/"
   weight = 40
