--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -71,7 +71,7 @@ diagram = false
 # Privacy pack
 #   Show a cookie consent message to visitors
 #   Anonymize IP in Google Analytics (if enabled)
-privacy_pack = false
+privacy_pack = true
 
 # Show related content at the bottom of pages?
 show_related = {post = true, project = true, publication = true, talk = true}
@@ -84,8 +84,8 @@ show_related = {post = true, project = true, publication = true, talk = true}
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "zepak@rki.de"
-phone = "+49 (30) 1875 432 94"
+email = "zeckenatlas@rki.de"
+phone = "+49 160 975 879 00"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
@@ -93,7 +93,7 @@ address = {street = "Nordufer 20", city = "Berlin", region = "", postcode = "133
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "52.53918579820322", longitude = "13.34711261762312"}
+#coordinates = {latitude = "52.5391857", longitude = "13.3471126"}
 
 # Directions for visitors to locate you.
 directions = ""
