--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -47,9 +47,10 @@ disableAliases = true  # Disable aliases when `redirects` is added to the `outpu
 # Troubleshooting: "Error: from config: failed to resolve output format "headers" from site config"
 # Temporarily remove "WebAppManifest", "headers", "redirects" from below home output field
 # Then run hugo mod clean, hugo mod get -u ./..., hugo mod tidy
+# After it re-enter "headers", "redirects" and run hugo again
 
 [outputs]
-  home = [ "HTML", "RSS", "JSON", "WebAppManifest", "headers", "redirects" ]
+  home = [ "HTML", "RSS", "JSON", "WebAppManifest", "headers", "redirects"]
   section = [ "HTML", "RSS" ]
 
 [mediaTypes."application/manifest+json"]
