--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -259,7 +259,7 @@ plugins_js  = ["custom"]
 [marketing]
   google_analytics = ""
   google_tag_manager = ""
-  google_site_verification = ""
+  google_site_verification = "jobrjxxYJ1VMm59dnqvyvXj1OQs1KjPA2FSoN0ci0AQ"
 
 ############################
 ## Content Management System
